--- a/invessence/modules/web/src/main/webapp/access-denied.xhtml
+++ b/invessence/modules/web/src/main/webapp/access-denied.xhtml
@@ -39,8 +39,7 @@
                     <span class="Wid100 DispBlock Fs18 red">Sorry, but you have no access to this page.<br/>
                     </span>
                     <div class="EmptyBox30"></div>
-                    <p:commandButton value="OK" styleClass="Fs16 RedButton"
-                                     actionListener="#{menu.redirectStartPage}"/>
+                    <p:commandButton type="submit" value="OK" styleClass="Fs16 RedButton" href="/login.xhtml"/>
                     </h:form>
                     <div class="EmptyBox50"></div>
                 </div>
