--- a/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
@@ -28,25 +28,25 @@
                         <p:tabView id="rTabView" orientation="top" activeIndex="#{cptc.rTab}"
                                    cache="false" dynamic="false">
                             <p:ajax event="tabChange" listener="#{cptc.onRTabChange}"/>
-                            <p:tab id="q1" title="1" >
+                            <p:tab id="q1" title="1">
                                 <ui:include src="/pages/consumer/addon/q1.xhtml"/>
                             </p:tab>
-                            <p:tab id="q2" title="2" >
+                            <p:tab id="q2" title="2">
                                 <ui:include src="/pages/consumer/addon/q2.xhtml"/>
                             </p:tab>
-                            <p:tab id="q3" title="3" >
+                            <p:tab id="q3" title="3">
                                 <ui:include src="/pages/consumer/addon/q3.xhtml"/>
                             </p:tab>
-                            <p:tab id="q4" title="4" >
+                            <p:tab id="q4" title="4">
                                 <ui:include src="/pages/consumer/addon/q4.xhtml"/>
                             </p:tab>
-                            <p:tab id="q5" title="5" >
+                            <p:tab id="q5" title="5">
                                 <ui:include src="/pages/consumer/addon/q5.xhtml"/>
                             </p:tab>
-                            <p:tab id="q6" title="6" >
+                            <p:tab id="q6" title="6">
                                 <ui:include src="/pages/consumer/addon/q6.xhtml"/>
                             </p:tab>
-                            <p:tab id="q7" title="7" >
+                            <p:tab id="q7" title="7">
                                 <ui:include src="/pages/consumer/addon/q7.xhtml"/>
                             </p:tab>
                         </p:tabView>
@@ -66,39 +66,68 @@
     <div class="Container50 Responsive50">
         <div class="ContainerIndent">
             <p:panel id="graphArea" style="border: 0px">
-                <div class="EmptyBox30"></div>
+                <div class="EmptyBox10"></div>
                 <div class="Container100 Responsive100">
-                    <div class="Container50  Fleft">
+                    <div class="Container100 MarTop20">
                         <div class="ContainerIndent">
-                            <p:outputPanel deferred="true">
-                                <p:chart type="pie" model="#{cepb.charts.pieChart}"
-                                         responsive="true"/>
-                            </p:outputPanel>
+                            <div class="EmptyBox10"></div>
+                            <i class="fa fa-anchor gray Fs24"></i>
+                            <span class="Fs10 DispBlock gray">Risk Index</span>
+                            <span class="Fs24 DispBlock invessenceblue">#{cepb.riskIndex}</span>
+
+                            <div class="EmptyBox10"></div>
+                        </div>
+                        <div class="ContainerIndent">
+                            <div class="EmptyBox10"></div>
+                            <i class="fa fa-dashboard gray Fs24"></i>
+                            <span class="Fs10 DispBlock gray">Investment Risk</span>
+                            <span class="Fs24 DispBlock red">#{cepb.totalRisk}</span>
+
+                            <div class="EmptyBox10"></div>
+                        </div>
+                        <div class="ContainerIndent">
+                            <div class="EmptyBox10"></div>
+                            <i class="fa fa-bar-chart gray Fs24"></i>
+                            <span class="Fs10 DispBlock gray">Expected Return</span>
+                            <span class="Fs24 DispBlock invessenceblue">#{cepb.totalExpectedReturns}</span>
+                            <div class="EmptyBox10"></div>
                         </div>
                     </div>
-                    <div class="Container50 Fleft">
-                        <div class="ContainerIndent">
-                            <p:dataTable styleClass="invAllocTable"
-                                         value="#{cepb.editableAsset}"
-                                         var="assetList" reflow="true">
+                    <p:outputPanel id="charts" style="border: 0px">
+                        <p:panel style="border: 0px">
+                            <div class="Container50  Fleft">
+                                <div class="Container100">
+                                    <p:outputPanel deferred="true">
+                                        <p:chart type="pie" model="#{cepb.charts.pieChart}"
+                                                 responsive="true"/>
+                                    </p:outputPanel>
+                                </div>
+                            </div>
+                            <div class="Container50 Fleft">
+                                <div class="ContainerIndent">
+                                    <p:dataTable styleClass="invAllocTable"
+                                                 value="#{cepb.editableAsset}"
+                                                 var="assetList" reflow="true">
 
-                                <p:column style="width: 2%; background-color: #{assetList.color};">
-                                    <h:outputText value=" "/>
-                                </p:column>
+                                        <p:column style="width: 2%; background-color: #{assetList.color};">
+                                            <h:outputText value=" "/>
+                                        </p:column>
 
-                                <p:column styleClass="Wid50 TexAlLeft"
-                                          resizable="true" headerText="Asset">
-                                    <h:outputText value="#{assetList.asset}"/>
-                                </p:column>
-                                <p:column styleClass="Wid40 TexAlRight"
-                                          resizable="true" headerText="Weight">
-                                    <h:outputText value="#{assetList.userEdit}">
-                                        <f:convertNumber pattern="##0.00%"/>
-                                    </h:outputText>
-                                </p:column>
-                            </p:dataTable>
-                        </div>
-                    </div>
+                                        <p:column styleClass="Wid50 TexAlLeft"
+                                                  resizable="true" headerText="Asset">
+                                            <h:outputText value="#{assetList.asset}"/>
+                                        </p:column>
+                                        <p:column styleClass="Wid40 TexAlRight"
+                                                  resizable="true" headerText="Weight">
+                                            <h:outputText value="#{assetList.userEdit}">
+                                                <f:convertNumber pattern="##0.00%"/>
+                                            </h:outputText>
+                                        </p:column>
+                                    </p:dataTable>
+                                </div>
+                            </div>
+                        </p:panel>
+                    </p:outputPanel>
                 </div>
             </p:panel>
         </div>
