--- a/invessence/modules/web/src/main/webapp/pages/consumer/funding.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/funding.xhtml
@@ -16,71 +16,88 @@
 
         <h:form>
 
-        <div class="layout-portlets-box">
-            <div class="Container50">
-                <div class="ContainerIndent TexAlLeft">
-                    <p:panel id="fundingInfo" style="border: 0px">
-                        <h3><h:outputText value="#{cepb.forwardInstructions}" escape="false"/></h3>
-                        <div class="EmptyBox10"/>
-                        <strong>Please have the following information readily available:</strong>
-                        <br/>
-                        <br/>
-                        <i>Personal Information</i>
-                        <ul>
-                            <li>Social Security Number</li>
-                            <li>Driver's License</li>
-                        </ul>
-                        <i>For an IRA you also need</i>
-                        <ul>
-                            <li>Beneficiary Information</li>
-                            <li>Beneficiary Social Security Number</li>
-                        </ul>
-                        <i>Funding</i>
-                        <ul>
-                            <li>Bank Information</li>
-                            <li>Brokerage Information</li>
-                        </ul>
+            <div class="layout-portlets-box">
+                <div class="Container60 Responsive50">
+                    <div class="ContainerIndent">
+                        <h1 class="BigTopic">Opening Your Account</h1>
+                        <p:panel id="fundingInfo" styleClass="TexAlLeft" style="border: 0px">
+                            <h3><h:outputText value="#{cepb.forwardInstructions}" escape="false"/></h3>
+                            <div class="EmptyBox10"/>
+                            <strong>Please have the following information readily available:</strong>
+                            <br/>
+                            <br/>
+                            <i>Personal Information</i>
+                            <ul>
+                                <li>Social Security Number</li>
+                                <li>Driver's License</li>
+                            </ul>
+                            <i>For an IRA you also need</i>
+                            <ul>
+                                <li>Beneficiary Information</li>
+                                <li>Beneficiary Social Security Number</li>
+                            </ul>
+                            <i>Funding</i>
+                            <ul>
+                                <li>Bank Information</li>
+                                <li>Brokerage Information</li>
+                            </ul>
 
-                        <p>
-                            You will now be redirected to Interactive Brokers.</p>
+                            <p>
+                                You will now be redirected to Interactive Brokers.</p>
 
-                        <p>You will also be <u>logged out of Invessence</u>!</p>
-                        <div class="EmptyBox10"/>
-                        <f:facet name="footer">
-                            <p:commandButton value="Continue" styleClass="TexAlCenter"
-                                             actionListener="#{cepb.forwardToIB}"/>
-                        </f:facet>
-                    </p:panel>
-
+                            <p>You will also be <u>logged out of Invessence</u>!</p>
+                            <div class="EmptyBox10"/>
+                            <f:facet name="footer">
+                                <p:commandButton value="Continue" styleClass="TexAlCenter"
+                                                 actionListener="#{cepb.forwardToIB}"/>
+                            </f:facet>
+                        </p:panel>
+                    </div>
                 </div>
-            </div>
-            <div class="Container50">
-                <div class="ContainerIndent TexAlCenter">
-                    <p>
-                        Invessence, Inc. acts as your registered investment adviser but does not take custody of your
-                        assets. We have partnered with
-                        <strong><span style="text-decoration: underline;">
+                <div class="Container40 Responsive50">
+                    <div class="ContainerIndent">
+                        <div class="Container100 Responsive50">
+                            <h1 class="BigTopic">Support</h1>
+                                <h3>Questions? Talk to one of our product specialists.</h3>
+                                <br/>
+                                <img src="/images/telephone_call_contact.png" alt="Phone" style="height: 18px;"/>
+                                Phone: #{menu.phone}
+                                <br/>
+                                <a href="mailto:info@invessence.com">
+                                    <img src="/images/email_envelope.png" alt="Email" style="height: 18px;"/>
+                                    Email: #{menu.email}
+                                </a>
+                            <div class="EmptyBox20"/>
+                        </div>
+                        <div class="Container100 Responsive50">
+                            <h1 class="BigTopic">Account Information</h1>
+                            <p>
+                                Invessence, Inc. acts as your registered investment adviser but does not take custody of your
+                                assets. We have partnered with
+                                <strong><span style="text-decoration: underline;">
                                 <a href="https://www.interactivebrokers.com" target="policy">
                                     Interactive Brokers, LLC
                                 </a>
                                 </span></strong>
-                        , a registered broker dealer and FINRA member, who provide technology to automate both the
-                        management and trading of our accounts. Each client creates and maintains ownership of
-                        their own separate brokerage account at Interactive Brokers.<br/>
-                    </p>
+                                , a registered broker dealer and FINRA member, who provide technology to automate both the
+                                management and trading of our accounts. Each client creates and maintains ownership of
+                                their own separate brokerage account at Interactive Brokers.<br/>
+                            </p>
 
-                    <p>
-                        Customer securities accounts at Interactive Brokers are protected by the
-                        <strong><span style="text-decoration: underline;">
+                            <p>
+                                Customer securities accounts at Interactive Brokers are protected by the
+                                <strong><span style="text-decoration: underline;">
                                 <a href="https://www.interactivebrokers.com/en/index.php?f=2334" target="policy">
                                     Securities Investor Protection Corporation.
                                 </a>
                                  </span></strong>
-                    </p>
-                </div>
-            </div>
-        </div>
+                            </p>
 
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </h:form>
 
     </ui:define>
